Partial support for decimal properties, make tests pass again

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,21 @@
 cmake_minimum_required(VERSION 2.4.4...3.5.0)
 project(fp)
 
-option(FP_INCLUDED_TEST "include test" OFF)
+option(FP_INCLUDE_CLI "include cli" OFF)
+
+if(FP_INCLUDE_CLI)
+	set(CMAKE_C_FLAGS "-g")
+	find_package(PkgConfig REQUIRED)
+	pkg_check_modules(LIBXML2 REQUIRED libxml-2.0)
+
+	add_executable(test
+		${PROJECT_SOURCE_DIR}/src/cli.c
+	)
+	target_link_libraries(test
+		PRIVATE
+		fp
+	)
+endif()
 
 add_library(fp STATIC 
 	src/d185.c
@@ -17,13 +31,3 @@ target_link_libraries(fp
 	PRIVATE
 	${LIBXML2_LIBRARIES} # require build
 )
-
-if(FP_INCLUDED_TEST)
-	add_executable(test
-		${PROJECT_SOURCE_DIR}/src/cli.c
-	)
-	target_link_libraries(test
-		PRIVATE
-		fp
-	)
-endif()
