Use fp_set_error instead of printf, remove support for some properties in merging, add fp1_fail

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,5 +29,5 @@ target_include_directories(fp
 )
 target_link_libraries(fp
 	PRIVATE
-	${LIBXML2_LIBRARIES} # require build
+	${LIBXML2_LIBRARIES} # TODO: switch to LibXml2::LibXml2
 )
