Rewrite xml parser to use ezxml instead of libxml2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,10 @@
-cmake_minimum_required(VERSION 3.5.0)
+cmake_minimum_required(VERSION 3.10)
 project(fp)
 
 option(FP_INCLUDE_CLI "include cli" OFF)
 
 if(FP_INCLUDE_CLI)
 	set(CMAKE_C_FLAGS "-g")
-	find_package(PkgConfig REQUIRED)
-	pkg_check_modules(LIBXML2 REQUIRED libxml-2.0)
-
 	add_executable(test
 		${PROJECT_SOURCE_DIR}/src/cli.c
 	)
@@ -21,13 +18,10 @@ add_library(fp STATIC
 	src/d185.c
 	src/data.c
 	src/xml.c
+	src/ezxml.c
 )
 target_include_directories(fp
 	PUBLIC 
 	${PROJECT_SOURCE_DIR}/src
 	${LIBXML2_INCLUDE_DIRS}
-)
-target_link_libraries(fp
-	PRIVATE
-	${LIBXML2_LIBRARIES} # TODO: switch to LibXml2::LibXml2
 )
